table css width fix on mobile and narrow screens

--- a/themes/quia/static/css/style.css
+++ b/themes/quia/static/css/style.css
@@ -715,9 +715,7 @@ img {
 	}
   
   table {
-    display: block;
     overflow-x: auto;
-    white-space: nowrap;
   }
   
   /* display header and footer when mobile */
